# xiuxian3

./: .gitignore
bot/xiuxian/: README.md  pyproject.toml
bot/xiuxian/xiuxianplugin/: __init__.py  api.py
plans/: 后台设计代码审查报告.md  后台设计方案.md  坐骑.csv  坐骑显化.csv  坐骑模块代码审查报告.md  坐骑模块设计方案.md  帮助图添加称号异火宗门方案.md  异火列表.csv  异火帮助按钮实施方案.md  异火模块代码审查报告.md  异火模块设计方案.md  称号模块代码审查报告.md  称号模块设计方案.md  网页链接格式修改方案.md  羽翼模块和光环模块十阶突破文字事件链及补充说明.docx  羽翼模块和光环模块实施设计方案.md  羽翼模块和光环模块审查报告.md  羽翼模块和光环模块每个阶级的命名.docx  羽翼模块和光环模块设计方案.md  英灵殿模块代码审查报告.md  英灵殿模块设计方案.md  道侣模块设计方案.md  镇渊与诛邪模块.docx  镇渊与诛邪模块代码审查报告.md  镇渊与诛邪模块设计方案.md  黑市模块代码审查报告.md  黑市模块设计方案.md
xiuxian3/xiuxianserver/: main.py  requirements.txt  后台初始化一次性密钥.txt
xiuxian3/xiuxianserver/launch/: config.py
xiuxian3/xiuxianserver/test/: 修仙_冒烟测试.py  修仙_异火冒烟测试.py  生成修仙帮助图.py
xiuxian3/xiuxianserver/修仙/: __init__.py  architecture.md  battle_log_links.py  combat_core.py  common.py  constants.py  reply.py  sql.py  wormhole_service.py  xiuxian.db  xiuxiangmrizhi.db  完整设定.md  数值统筹规划.md
xiuxian3/xiuxianserver/修仙/二手市场/: service.py
xiuxian3/xiuxianserver/修仙/修仙帮助/: service.py
xiuxian3/xiuxianserver/修仙/修仙界历史/: service.py
xiuxian3/xiuxianserver/修仙/光环/: __init__.py  service.py  说明.md
xiuxian3/xiuxianserver/修仙/后台接口/: __init__.py  service.py  site.py  说明.md
xiuxian3/xiuxianserver/修仙/坐骑/: __init__.py  service.py  说明.md
xiuxian3/xiuxianserver/修仙/异火/: __init__.py  service.py  说明.md
xiuxian3/xiuxianserver/修仙/战斗日志/: site.py
xiuxian3/xiuxianserver/修仙/探险/: __init__.py  service.py  说明.md
xiuxian3/xiuxianserver/修仙/数据库备份/: xiuxian_20260621_1629.db  (+13 more)
(+17 files in other folders)
